# discpp-bot-boilerplate

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cmake.yml
cmake/: log.cmake
source/: CMakeLists.txt  env.cpp  env.hpp  main.cpp  main.hpp
